# Failsafe-UAV2

GPS/NEO7/: Neo7.cpp  Neo7.hpp  UBX_Protocol_Constants.hpp  main.cpp
GPS/NEO7/read/: Neo7.cpp  UBX_Protocol_Constants.hpp  readonly.cpp
GPS/SOFTGPS/: Neo7.cpp  Neo7.hpp  UBX_Protocol_Constants.hpp  main.cpp
IMU/: Gyro_calibration.cpp  I2C.cpp  I2C.hpp  I2Cdev.cpp  I2Cdev.h  IMU.cpp  IMU.hpp  LSM6DSOX.hpp  MAG_calibration.cpp  Makefile  cali_test.cpp  calibration.cpp  mainJuice.cpp
MAVLINK/: CMakeLists.txt  GetMAVLinkdata.cpp  TelemetryTest.cpp
RDS/: CMakeLists.txt  RDSMain.cpp
RDS/BAR/: BAR.cpp  BAR.hpp  MS5611.hpp
RDS/GPS/: GPS.cpp  GPS.hpp  UBX_Protocol_Constants.hpp  main.cpp
RDS/IMU/: I2C.cpp  I2C.hpp  I2Cdev.cpp  I2Cdev.h  IMU.cpp  IMU.hpp  LIS3MDL.hpp  LSM6DSOX.hpp  main.cpp
RDS/ServicePlatform/: Maps.py  Orientation.py  Platform.py  UDP_server.py
RDS/UDP/: UDP.cpp  UDP.hpp
RDS/ValidateState/: ValidateState.cpp  ValidateState.hpp  mainV2.cpp
Random/: ASCII.txt  ArgumentAndy.cpp  Calibrate.cpp  I2C.cpp  IMU.cpp  Mahony.h  Makefile  QuaternionsEX.cpp  SizeofArray.cpp  SoftUART.cpp  Tester_2.cpp  ValidateFlight.cpp  Weirdchamp.cpp  charray.cpp  tempCodeRunnerFile.cpp  thread_time.cpp
Random/LogTest/: Johnny.hpp  test.cpp
Random/LogTest/Database/: log_2022-11-24.txt
